<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:ignore="ExtraText,ScrollViewCount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <com.example.imagepickercomp.PickMediaView
                android:id="@+id/pickMediaView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/personal_ad_pickimage_bg"
                android:baselineAligned="false"
                app:editMenuColor="#442045"
                app:maxImages="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/custom_shape"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/tvPetNameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/petName"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimen_18_sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etmyPetName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/tvPetNameTitle"
                    android:background="@android:color/darker_gray"
                    android:enabled="false"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="Bazoka"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimen_18_sp"
                    tools:ignore="LabelFor" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/tvPetGenderTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/petGender"

                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimen_18_sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etPetGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/tvPetGenderTitle"
                    android:background="@android:color/darker_gray"
                    android:enabled="false"
                    android:paddingLeft="10dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:text="Male"
                    android:textColor="@android:color/black"
                    tools:ignore="LabelFor" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/tvPriceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/petPrice"

                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimen_18_sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etmyPetPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/tvPriceTitle"
                    android:background="@color/color_grey_row"
                    android:cursorVisible="true"
                    android:inputType="number"
                    android:maxLength="5"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:text="500"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimen_18_sp"
                    tools:ignore="LabelFor" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/etmyPetPrice"
                    android:text="@string/dollarSign"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimen_18_sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Description: "
            android:textColor="@color/color_black_main"
            android:textSize="@dimen/dimen_20_sp"
            android:textStyle="bold|italic" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_shape"
            android:elevation="@dimen/createAd_elevation"
            android:orientation="vertical"
            android:padding="10dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etmyPetDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/createAd_petDesc_hint"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:maxLines="2"
                android:scrollHorizontally="false"
                android:singleLine="false"
                android:text="he is very smart dog"
                app:met_floatingLabelText="string/createAd_petDesc_hint"
                app:met_helperText="@string/createAd_descHelperText"
                app:met_iconLeft="@drawable/ic_description_black_24dp"
                app:met_iconPadding="0dp"
                app:met_maxCharacters="70"
                app:met_singleLineEllipsis="true" />
        </LinearLayout>

        <Button
            android:id="@+id/updateAd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/createAd_button_margin"
            android:layout_marginBottom="@dimen/createAd_button_margin"
            android:background="@drawable/custom_button"
            android:elevation="@dimen/createAd_elevation"
            android:paddingLeft="@dimen/createAd_button_paddingleftright"
            android:paddingRight="@dimen/createAd_button_paddingleftright"
            android:text="@string/updateAd"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="17sp" />
    </LinearLayout>
</ScrollView>