<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="34dp"
    tools:context=".profileModule.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ImageViewRelative"
        android:layout_marginTop="-20dp"
        android:background="@drawable/registration_border"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName"
                android:textColor="@android:color/black"
                android:textSize="@dimen/profile_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUserName"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@android:color/darker_gray"
                android:paddingLeft="8dp"
                android:paddingTop="5dp"
                android:paddingRight="8dp"
                android:paddingBottom="5dp"
                android:textColor="@color/color_black_main"

                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_textview"
                android:textColor="@android:color/black"
                android:textSize="@dimen/profile_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@android:color/darker_gray"
                android:paddingLeft="8dp"
                android:paddingTop="5dp"
                android:paddingRight="8dp"
                android:paddingBottom="5dp"
                android:textColor="@color/color_black_main"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_textview"
                android:textColor="@android:color/black"
                android:textSize="@dimen/profile_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUserPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"

                android:background="@android:color/darker_gray"
                android:paddingLeft="8dp"
                android:paddingTop="5dp"
                android:paddingRight="8dp"
                android:paddingBottom="5dp"
                android:textColor="@color/color_black_main"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ImageViewRelative"
        android:layout_width="120dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="-10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUser"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/user"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />


    </RelativeLayout>


</RelativeLayout>